some actions with buttons

--- a/Prototype0/app/src/main/res/values/strings.xml
+++ b/Prototype0/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="button1">language 1</string>
     <string name="button2">language 2</string>
     <string name="repeat_button"></string>
+    <string name="radio_english">English</string>
+    <string name="radio_spanish">Spanish</string>
+    <string name="select_language">Select Your Language</string>
 
 </resources>
