--- a/Prototype0/app/src/main/res/values/strings.xml
+++ b/Prototype0/app/src/main/res/values/strings.xml
@@ -8,6 +8,6 @@
     <string name="radio_english">English</string>
     <string name="radio_spanish">Spanish</string>
     <string name="select_language">Select Your Language</string>
-    <string name="secondPageBtn">Switch Page</string>
+    <string name="secondPageBtn">Home Page</string>
 
 </resources>
