--- a/Prototype0/app/src/main/res/values/strings.xml
+++ b/Prototype0/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="repeat_button"></string>
     <string name="radio_english">English</string>
     <string name="radio_spanish">Spanish</string>
-
+    <string name="secondPageBtn">Home Page</string>
     <string name="second_page">My Daily Life</string>
     <string name="textView_lang1">My language text</string>
     <string name="textView_lang2">Foreign language text</string>
