second page button edit

--- a/Prototype0/app/src/main/res/values/strings.xml
+++ b/Prototype0/app/src/main/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="button1">language 1</string>
     <string name="button2">language 2</string>
     <string name="repeat_button"></string>
+    <string name="secondPageBtn">Return</string>
     <string name="radio_english">English</string>
     <string name="radio_spanish">Spanish</string>
-
     <string name="second_page">My Daily Life</string>
     <string name="textView_lang1">My language text</string>
     <string name="textView_lang2">Foreign language text</string>
